Bug 197659 - <body> with overflow:hidden shouldn't be keyboard scrollable on iOS
Summary: <body> with overflow:hidden shouldn't be keyboard scrollable on iOS
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-05-07 06:56 PDT by Antti Koivisto
Modified: 2021-01-25 00:28 PST (History)
6 users (show)

See Also:


Attachments
patch (1.34 KB, patch)
2019-05-07 07:07 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (3.91 KB, patch)
2019-05-07 08:26 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff
patch (3.94 KB, patch)
2019-05-07 08:41 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2019-05-07 06:56:36 PDT
Bug 153852 fixed touch scrolling but physical keyboard still scrolls.
Comment 1 Antti Koivisto 2019-05-07 07:07:06 PDT
Created attachment 369279 [details]
patch
Comment 2 Antti Koivisto 2019-05-07 08:26:45 PDT
Created attachment 369284 [details]
patch
Comment 3 Radar WebKit Bug Importer 2019-05-07 08:37:09 PDT
<rdar://problem/50541453>
Comment 4 Antti Koivisto 2019-05-07 08:41:01 PDT
Created attachment 369285 [details]
patch
Comment 5 WebKit Commit Bot 2019-05-07 10:37:23 PDT
Comment on attachment 369285 [details]
patch

Clearing flags on attachment: 369285

Committed r245016: <https://trac.webkit.org/changeset/245016>
Comment 6 WebKit Commit Bot 2019-05-07 10:37:25 PDT
All reviewed patches have been landed.  Closing bug.