<body> with overflow:hidden shouldn't be keyboard scrollable on iOS https://bugs.webkit.org/show_bug.cgi?id=197659 Source/WebKit:

<rdar://problem/50541453>

Reviewed by Antoine Quint.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView isScrollableForKeyboardScrollViewAnimator:]):

Disable also keyboard scrolling when touch scrolling is disabled.

LayoutTests:

Reviewed by Antoine Quint.

* fast/scrolling/ios/body-overflow-hidden-keyboard-expected.html: Added.
* fast/scrolling/ios/body-overflow-hidden-keyboard.html: Added.


Canonical link: https://commits.webkit.org/211796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245016 268f45cc-cd09-0410-ab3c-d52691b4dbfc